# washizu-mahjong

./: .gitignore  CMakeLists.txt  README.md
client/: 2d.cxx  cli.cxx  dummy.cxx  game.hpp  game_2d.cpp  game_cli.cpp  game_core.cpp
input/: input.cpp  input.hpp
linux-build/: CMakeLists.txt
mahjong/: interaction.c  interaction.h  mahjong.c  mahjong.cc  mahjong.h  mahjong.hpp  test.c  yaku.c  yaku.h
renderer/: 2d.cpp  2d.hpp  3d.hpp  camera.cpp  camera.hpp  mesh.cpp  mesh.hpp  shader.cpp  shader.hpp  test.cpp  text.cpp  text.hpp  texture.cpp  texture.hpp
server/: client.cpp  deck.cpp  deck.hpp  extra.hpp  game.cpp  game.hpp  main.cxx
src/client/: cli.cxx  dummy.cxx  game.cpp  game.hpp  receiver.cpp  receiver.hpp  reciever.cpp  reciever.hpp
src/mahjong/: interaction.c  interaction.h  mahjong.c  mahjong.h  test.c  yaku.c  yaku.h
src/server/: client  client.cpp  client.hpp  deck.cpp  deck.hpp  extra.cpp  game.cpp  game.hpp  handler.cpp  handler.hpp  main.cxx  message.hpp  server  test  test.cpp  test_client.cpp  test_map.cpp  test_more.cpp  test_thread.cpp  utils.hpp
src/utils/: message.hpp  optim.hpp
test/core/mahjong/: hand.cc  tile.cc
utils/: message.hpp
v2/core/mahjong/: mahjong.cc  mahjong.hpp
v2/core/utils/: stack_allocator.hpp
win-build/: CMakeLists.txt
